test/testdata/classes/blank_property_access_error.lox
class Foo {}
var foo = Foo();
// error: '_' is not a valid property name
// lint error: '_' is not a valid property name
foo._;
